# intelligent-document-sorter

./: .env.example  .gitignore  README.md  debug_client.py  main.py  pyproject.toml  test.py
core/: agent.py  auth_config.py  connection.py  constants.py  tools.py
